--- a/Estilos/styles_Grecia.css
+++ b/Estilos/styles_Grecia.css
@@ -9,10 +9,11 @@ header {
 header h1 {
   text-align: center;
   font-size: 50px;
-  color: rgb(187, 0, 0);
+  color: rgb(203, 204, 133);
   font-weight: bold;
   font-family: serif;
   text-shadow: 2px 2px 4px rgb(228, 170, 170);
+ 
 
 }
 
@@ -32,7 +33,6 @@ main #paris_nav {
   justify-content: space-around;
   align-items: center;
   font-family: cursive 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(to bottom, rgb(219, 121, 103), #fff); /* Degradado de azul a blanco */
   font-size: 1.5vw;
   border-radius: 4%;
 
@@ -53,7 +53,7 @@ main #paris_nav {
   font-weight: bold;
 }
 #paris_nav ul li a:hover {
-  color: #b30404; /* Cambia esto al color deseado al pasar el mouse */
+  color: #b3b004; /* Cambia esto al color deseado al pasar el mouse */
 }
 
 #descripcion {
@@ -62,7 +62,7 @@ main #paris_nav {
   margin-left: auto;
   margin-right: auto;
   font-size: 20px;
-  text-shadow: 2px 2px 4px rgba(61, 6, 107, 0.5);
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
 }
 
 .gallery {
@@ -76,12 +76,12 @@ main #paris_nav {
 }
 
 .item {
-  flex-basis: 30%; /* Tamaño inicial */
+  flex-basis: 39%; /* Tamaño inicial */
   position: relative;
 }
 
 .large {
-  flex-basis: 60%; /* Tamaño mayor para la imagen grande */
+  flex-basis:45%; /* Tamaño mayor para la imagen grande */
 }
 
 .item img {
