--- a/Estilos/styles_marruecos.css
+++ b/Estilos/styles_marruecos.css
@@ -3,6 +3,7 @@ body {
     background-color: rgba(250, 250, 250, 1);
     border: 1px solid black;
     text-align: center;
+    background-image: linear-gradient(to bottom, rgb(255, 255, 255), #e7c739); /* Degradado de azul a blanco */
   }
   section {
     scroll-margin-top: 11em; /* Margen superior adicional para el desplazamiento */
@@ -11,12 +12,28 @@ body {
     height: auto;
     padding-top: 9%;
   }
+  #titulo{
+    text-align: center;
+    font-size: 50px;
+    color: rgba(177, 180, 10, 0.733);
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 4px rgb(14, 11, 11);
+    background-image: url(../Imagenes/marruecos_principal.jpg);
+    background-position: center;
+    background-size: cover;
+    height: auto;
+    max-width: 50%;
+    margin-left: 25%;
+    border-radius: 10%;
+  }
   main {
     text-align: center;
     padding-left: 10%;
     padding-right: 10%;
-    border: solid 10px black;
+    
   }
+ 
   
   #inicio {
     position: fixed; /* Posición fija */
@@ -59,12 +76,12 @@ body {
   }
   
   #marruecos_nav ul li a {
-    color: rgb(18, 151, 107); /* Cambia esto al color deseado */
+    color: rgb(255, 255, 255); /* Cambia esto al color deseado */
     text-decoration: none;
     font-weight: bold;
   }
   #marruecos_nav ul li a:hover {
-    color: #2d16b4; /* Cambia esto al color deseado al pasar el mouse */
+    color: #43ccdf; /* Cambia esto al color deseado al pasar el mouse */
   }
   
   #descripcion {
@@ -72,7 +89,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     font-size: 20px;
-    text-shadow: 3px 2px 4px rgba(204, 218, 8, 0.5);
+    text-shadow: 3px 2px 4px rgba(3, 3, 3, 0.5);
   }
   
   .gallery {
@@ -90,7 +107,7 @@ body {
   }
   
   .large {
-    flex-basis: 60%; /* Tamaño mayor para la imagen grande */
+    flex-basis: 45%; /* Tamaño mayor para la imagen grande */
   }
   
   .item img {
